fix button label line break when label text is too big

--- a/src/styles/pages/userLinksPage/components/buttonsGrid.scss
+++ b/src/styles/pages/userLinksPage/components/buttonsGrid.scss
@@ -10,6 +10,7 @@
             border-radius: var(--user-button-border-radius);
             font-size: 1rem;
             font-family: var(--font);
+            word-break: break-all
         }
 
         .user-btn-default {
